Added discord embed

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Open Graph / Discord Embed Tags -->
+    <meta property="og:title" content="PromptPerfect AI" />
+    <meta property="og:description" content="Transform raw ideas into high-quality, structured instructions for any LLM using advanced AI refinement." />
+    <meta property="og:image" content="/preview.png" />
+    <meta property="og:url" content="https://promptperfect-ai.web.app" />
+    <meta property="og:type" content="website" />
+    <meta name="theme-color" content="#9333ea" /> <!-- Purple accent color -->
+
     <title>PromptPerfect AI - Refine Your Prompts</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
