--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:description" content="Transform raw ideas into high-quality, structured instructions for any LLM using advanced AI refinement." />
     <meta property="og:image" content="/preview.png" />
     <meta property="og:url" content="https://promptperfect-ai.web.app" />
+    <meta property="og:image" content="https://github.com/enzomtpYT/promptperfect-ai/blob/main/public/preview.png?raw=true" /> 
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#9333ea" /> <!-- Purple accent color -->
 
